Fix mobile blog button visibility on desktop - hide with !important

--- a/css/mobile-fixes.css
+++ b/css/mobile-fixes.css
@@ -2,7 +2,14 @@
 
 /* Hide mobile blog button by default (desktop) */
 .mobile-blog-btn {
-  display: none;
+  display: none !important;
+}
+
+/* Only show mobile blog button on mobile screens */
+@media screen and (max-width: 992px) {
+  .mobile-blog-btn {
+    display: inline-block !important;
+  }
 }
 
 /* Hide mobile menu button by default */
